# algorithms

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt  heap.h  sort_insertion.h  sort_insertion_improved.h  sort_merge_topdown.h  sort_merge_topdown_cutoff.h  sort_merge_topdown_if_not_sorted.h  sort_merge_topdown_nc.h  sort_quick.h  sort_selection.h
algorithms/include/algorithms/: binary_gap.h  sort_merge_topdown.h  sort_merge_topdown_cutoff.h  sort_merge_topdown_if_not_sorted.h  sort_selection.h  sort_shell.h
benchmarks/: CMakeLists.txt  bench_sort_insertion.cpp  bench_sort_insertion_improved.cpp  bench_sort_merge_topdown.cpp  bench_sort_merge_topdown_cutoff.cpp  bench_sort_merge_topdown_if_not_sorted.cpp  bench_sort_merge_topdown_nc.cpp  bench_sort_quick.cpp  bench_sort_selection.cpp  bench_sort_shell.cpp
cmake/: FindGoogleTest.cmake
instrumentation/: CMakeLists.txt  instrument_sort.h  instrument_sort_insertion.cpp  instrument_sort_insertion_improved.cpp  instrument_sort_merge_topdown.cpp  instrument_sort_merge_topdown_cutoff.cpp  instrument_sort_merge_topdown_if_not_sorted.cpp  instrument_sort_merge_topdown_nc.cpp  instrument_sort_quick.cpp  instrument_sort_selection.cpp  instrument_sort_shell.cpp
instrumentation/details/: instrument_policy_count_operations.h  instrumented_t.h  literals.h  update_average.h
scripts/: config_sorts.py  sorts_generate_benchmarks.py  sorts_generate_instrumentation.py  sorts_generate_tests.py
tests/: CMakeLists.txt  test_binary_gap.cpp  test_sort.h  test_sort_insertion.cpp  test_sort_insertion_improved.cpp  test_sort_merge_topdown.cpp  test_sort_merge_topdown_cutoff.cpp  test_sort_merge_topdown_if_not_sorted.cpp  test_sort_merge_topdown_nc.cpp  test_sort_quick.cpp  test_sort_selection.cpp  test_sort_shell.cpp
